build/apps/pihole/overlays/prod/external-dns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.k8s.io/external-dns/external-dns:v0.13.2
        args:
        - --source=service
        - --source=ingress
        - --source=node
        - --source=crd
        - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
        - --crd-source-kind=DNSEndpoint
        - --registry=noop
        - --policy=upsert-only
        - --provider=pihole
        - --pihole-server=http://pihole-dashboard.pihole.svc.cluster.local
        resources:
          limits:
            memory: "2Gi"
            cpu: "1"
      securityContext:
        fsGroup: 65534
