build/apps/pihole/overlays/prod/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-admin
spec:
  addPrefix:
    prefix: /admin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: pihole-add-admin@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: PiHole DNS
    gethomepage.dev/group: Operations
    gethomepage.dev/icon: pi-hole.png
    gethomepage.dev/name: PiHole
  labels:
    app.kubernetes.io/name: pihole
spec:
  rules:
  - host: dns.graytonward.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pihole-dashboard
            port: 
              name: dashboard
